MAINT-2954 Remove redundant sort and minor tidy up